--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-bookstore_project/env/
+env/
 bookstore_project/bookstore_project/__pycache__
 bookstore_project/bookstore_project/store/__pycache__/
 bookstore_project/bookstore_project/store/management/
