--- a/bookstore_project/requirements.txt
+++ b/bookstore_project/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.2.7
 dj-database-url==0.5.0
 Django==3.0.5
 django-debug-toolbar==2.2
+django-heroku==0.3.1
 gunicorn==20.0.4
 Pillow==7.1.2
+psycopg2==2.8.5
 pytz==2019.3
 PyYAML==5.3.1
 sqlparse==0.3.1
